fixing overflow

--- a/airlog-ui/src/index.css
+++ b/airlog-ui/src/index.css
@@ -49,10 +49,16 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
+  /* padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; */
+}
+
+body {
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
